<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@mipmap/bg_system" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/activity_title1" />
    <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textColor="@color/white_theme" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/auto_start" />
                <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <ImageButton android:id="@+id/ib_begin" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@mipmap/toggle_close" android:contentDescription="@string/app_name" android:scaleX="0.7" android:scaleY="0.7" />
            </LinearLayout>
            <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textColor="@color/white_theme" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/voice_alarm" />
                <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <ImageButton android:layout_gravity="bottom" android:id="@+id/ib_voice_alarm" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@mipmap/toggle_close" android:scaleX="0.7" android:scaleY="0.7" />
            </LinearLayout>
            <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textColor="@color/white_theme" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unit_pressure" />
                <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:background="@drawable/bg_ll_unit" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textColor="@color/gradient_start" android:layout_gravity="center_vertical" android:id="@+id/tv_unit_bar" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/pressure_bar" android:layout_weight="1.0" />
                    <View android:background="@color/divider_bg" android:layout_width="1.0dip" android:layout_height="fill_parent" />
                    <TextView android:textColor="@color/gradient_start" android:layout_gravity="center_vertical" android:id="@+id/tv_unit_psi" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/pressure_psi" android:layout_weight="1.0" />
                    <View android:background="@color/divider_bg" android:layout_width="1.0dip" android:layout_height="fill_parent" />
                    <TextView android:textColor="@color/gradient_start" android:layout_gravity="center_vertical" android:id="@+id/tv_unit_kpa" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pressure_kpa" android:layout_weight="1.0" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <TextView android:textColor="@color/white_theme" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/pressure_range" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip">
                    <TextView android:textColor="@color/white_theme" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ceiling" />
                    <SeekBar android:id="@+id/sb_pressure_ceiling" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:max="10000" android:progress="75" android:progressDrawable="@drawable/seek_bar_style" android:thumb="@mipmap/thumb_bar" android:thumbOffset="5.0dip" android:layout_weight="1.0" />
                    <TextView android:textColor="@color/blue_theme" android:layout_gravity="center_vertical" android:id="@+id/tv_pressure_ceiling" android:layout_width="35.0dip" android:layout_height="wrap_content" android:text="90" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip">
                    <TextView android:textColor="@color/white_theme" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/floor" />
                    <SeekBar android:id="@+id/sb_pressure_floor" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:max="10000" android:progress="30" android:progressDrawable="@drawable/seek_bar_style" android:thumb="@mipmap/thumb_bar" android:thumbOffset="5.0dip" android:layout_weight="1.0" />
                    <TextView android:textColor="@color/blue_theme" android:layout_gravity="center_vertical" android:id="@+id/tv_pressure_floor" android:layout_width="35.0dip" android:layout_height="wrap_content" android:text="30" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textColor="@color/white_theme" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unit_temperature" />
                <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <LinearLayout android:orientation="horizontal" android:background="@drawable/bg_ll_unit" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textColor="@color/gradient_start" android:layout_gravity="center_vertical" android:id="@+id/tv_unit_c" android:paddingLeft="15.0dip" android:paddingTop="4.0dip" android:paddingRight="15.0dip" android:paddingBottom="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/temperature_c" />
                    <View android:background="@color/divider_bg" android:layout_width="1.0dip" android:layout_height="fill_parent" />
                    <TextView android:textColor="@color/gradient_start" android:layout_gravity="center_vertical" android:id="@+id/tv_unit_f" android:paddingLeft="15.0dip" android:paddingTop="4.0dip" android:paddingRight="15.0dip" android:paddingBottom="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/temperature_f" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <TextView android:textColor="@color/white_theme" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/temperature_range" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip">
                    <TextView android:textColor="@color/white_theme" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ceiling" />
                    <SeekBar android:id="@+id/sb_temperature_ceiling" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:max="10000" android:progress="45" android:progressDrawable="@drawable/seek_bar_style" android:thumb="@mipmap/thumb_bar" android:thumbOffset="5.0dip" android:layout_weight="1.0" />
                    <TextView android:textColor="@color/blue_theme" android:layout_gravity="center_vertical" android:id="@+id/tv_temperature_ceiling" android:layout_width="35.0dip" android:layout_height="wrap_content" android:text="45" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
            <TextView android:textColor="@drawable/bg_text" android:gravity="bottom" android:id="@+id/tv_ghost" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="30.0dip" android:text="@string/ghost" />
            <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textColor="@drawable/bg_text" android:gravity="bottom" android:layout_gravity="bottom" android:id="@+id/tv_update" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/update" android:layout_weight="1.0" />
                <TextView android:textColor="@color/seekbar_bg" android:gravity="bottom|center|right" android:layout_gravity="bottom" android:id="@+id/tv_version" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginRight="12.0dip" android:text="@string/current_version" android:layout_weight="1.0" />
            </LinearLayout>
            <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>