<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/left_frame"

    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.taiya.fragment.LeftFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/left_home"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/home_page_pressed"
                android:padding="10dp"
                />
            <TextView
                android:text="@string/menu_home"
                style="@style/LeftHome"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/left_add"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_device_pressed"
                android:padding="10dp"
                />
            <TextView
                android:text="@string/menu_device"
                style="@style/LeftHome"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/left_Change"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_change_tire_pressed"
                android:padding="10dp"
                />
            <TextView
                android:text="@string/menu_change"
                style="@style/LeftHome"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/left_Setting"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_elitem_edituser_pressed"
                android:padding="10dp"
                />
            <TextView
                android:text="@string/menu_setting"
                style="@style/LeftHome"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/left_Help"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_doubt"
                android:padding="10dp"
                />
            <TextView
                android:text="@string/menu_help"
                style="@style/LeftHome"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
